Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134600

FileDialog's currentFolder shows regression on Debian

XMLWordPrintable

    • Linux/X11
    • d245a7c0c (dev), 6b30af8b2 (6.10), 487578a83 (6.9), 6fdfa24ce (tqtc/lts-6.8)

      FileDialog {
      id: fileDialog
      title: "Please choose a file"
      onCurrentFolderChanged:

      { console.log(currentFolder) currentFolder = "file:///D:/" console.log(fileDialog.currentFolder) }

      }

      It seems like on Debian currentFolder value is not being considered and given content of the given path is not showing. Above code snippet used to work with Qt6.5.2 . i.e. if user is trying to navigate to other folder it will not let it do and always reset to D:\ and contents of D is listed.

      On Ubuntu and Mac and Windows this behaves differently as well.

      Attached is full example and some screen recording.

        1. FileDialog.zip
          6.95 MB
        2. qtbug134600.zip
          0.6 kB
        3. openSUSE.log
          25 kB
        4. ubuntu.log
          5 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            evenandersen Even Oscar Andersen
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes