Add missing call to beginResetModel()

QQuickFolderListModel::beginResetModel calls endResetModel
automatically to avoid consequtive calls to beginResetModel.

However, the same logic is not done for endResetModell. This
triggers a endResetModel without a preceeding beginResetModel
which (apparently) causes problems with updating the view
contents in some cases.

Fixes: QTBUG-134600
Pick-to: 6.8
Change-Id: I9fe3034b784d83ee2ed5b65bdad3a77545891bc2
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit d245a7c0c7f7b9c9b6fa0917e5be9cd691c8a571)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 6b30af8b27db5f03d25252591789e3abe5d32c9b)